cloudformation/network.yml
---
  Description: >
    CloudFormation template to provision underlying network infrastructure.
  
  Parameters:
    EnvironmentName:
      Description: Environment
      Type: String
      Default: Production
    
    VpcCIDR:
        Description: Please enter the IP range (CIDR notation) for this
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the Subnet
        Type: String
        Default: 10.0.0.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the Subnet
        Type: String
        Default: 10.0.1.0/24
        
    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the Subnet
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the Subnet
        Type: String
        Default: 10.0.3.0/24

  Resources:
      VPC:
          Type: AWS::EC2::VPC
          Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName
      PrivateSubnet1:
          Type: AWS::EC2::Subnet
          Properties:
            VpcId: !Ref VPC 
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet 1
      
      PublicSubnet1:
          Type: AWS::EC2::Subnet
          Properties:
            VpcId: !Ref VPC 
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet 1

      InternetGateway: 
          Type: AWS::EC2::InternetGateway

      InternetGatewayAttachment:
          Type:  AWS::EC2::VPCGatewayAttachment 
          Properties: 
            VpcId: !Ref VPC 
            InternetGatewayId: !Ref InternetGateway

      NatGateway1EIP:
          Type: AWS::EC2::EIP
          DependsOn: InternetGatewayAttachment
          Properties: 
              Domain: vpc


      NatGateway1: 
          Type: AWS::EC2::NatGateway
          Properties: 
              AllocationId: !GetAtt NatGateway1EIP.AllocationId
              SubnetId: !Ref PublicSubnet1

      PublicRouteTable:
          Type: AWS::EC2::RouteTable
          Properties: 
              VpcId: !Ref VPC
              Tags: 
                  - Key: Name 
                    Value: !Sub ${EnvironmentName} Public Routes

      DefaultPublicRoute: 
          Type: AWS::EC2::Route
          DependsOn: InternetGatewayAttachment
          Properties: 
              RouteTableId: !Ref PublicRouteTable
              DestinationCidrBlock: 0.0.0.0/0
              GatewayId: !Ref InternetGateway
      
      PublicSubnet1RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
              RouteTableId: !Ref PublicRouteTable
              SubnetId: !Ref PublicSubnet1
            
      PrivateRouteTable1:
          Type: AWS::EC2::RouteTable
          Properties: 
              VpcId: !Ref VPC
              Tags: 
                  - Key: Name 
                    Value: !Sub ${EnvironmentName} Private Routes (AZ1)

      DefaultPrivateRoute1:
          Type: AWS::EC2::Route
          Properties:
              RouteTableId: !Ref PrivateRouteTable1
              DestinationCidrBlock: 0.0.0.0/0
              NatGatewayId: !Ref NatGateway1

      PrivateSubnet1RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
              RouteTableId: !Ref PrivateRouteTable1
              SubnetId: !Ref PrivateSubnet1
  Outputs:
    VPC:
        Description: Cluster VPC
        Value: !Ref VPC
        Export:
          Name: !Sub ${EnvironmentName}-vpc-id
    PublicSubnet:
        Description: Public subnet
        Value: !Ref PublicSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-public-subnet
    PrivateSubnet:
        Description: Private subnets
        Value: !Ref PrivateSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-private-subnet
